Fix z-index

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -35,6 +35,7 @@ body {
 
 #grid-item {
     display: none;
+    z-index: 3;
 }
 
 .waves-effect{
